--- a/app/views/user_games/index.html.erb
+++ b/app/views/user_games/index.html.erb
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WORDS</title>
-  <h2 class="name-title title">Welcome to Dereks Wordle clone!</h2>
+  <h2 class="name-title title">Made by Derek Young!</h2>
+  <a href="https://www.linkedin.com/in/derekpyoung12/">Linkedin</a>
 
 </head>
 
