--- a/app/views/user_games/index.html.erb
+++ b/app/views/user_games/index.html.erb
@@ -6,8 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WORDS</title>
-  <h2 class="name-title title">Made by Derek Young!</h2>
-  <a href="https://www.linkedin.com/in/derekpyoung12/">Linkedin</a>
+  <h2 class="name-title title">Made by<a href="https://www.linkedin.com/in/derekpyoung12/"> Derek Young!</a></h2>
+
+  <p>Its a free wordle clone, enjoy!</p>
 
 </head>
 
