--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,6 +8,10 @@
   border-radius: 5px;
 }
 
+p {
+  color: white !important;
+}
+
 @media only screen and (max-width: 600px) {
 
   .grid-container {
